--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.vscode": "1.2.1",
     "com.unity.postprocessing": "2.3.0",
     "com.unity.probuilder": "4.2.3",
+    "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.test-framework": "1.1.14",
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.3.4",
